# Rubik-s-Cube

./: CMakeLists.txt
Cmake/Modules/: Helpers.cmake
Cmake/Scripts/: CopyDebugHelper.cmake  DeployQtHelper.cmake
Cube/: CMakeLists.txt
Cube/Resource/Qml/: main.qml  main_old.qml
Cube/Source/: OpenGLRenderer.cpp  main.cpp
Test/Shader/: CMakeLists.txt
Test/Shader/Include/: OpenGLRenderer.h  OpenGLWindow.h
Test/Shader/Resource/Qml/: main.qml
Test/Shader/Source/: OpenGLRenderer.cpp  OpenGLWindow.cpp  main.cpp
Test/Squircle/: CMakeLists.txt
Test/Squircle/Include/: squircle.h
Test/Squircle/Source/: main.cpp
Test/Triangle/: CMakeLists.txt
Test/Triangle/Include/: OpenGLRenderer.h  OpenGLWindow.h
Test/Triangle/Resource/Qml/: main.qml
Test/Triangle/Source/: OpenGLRenderer.cpp  OpenGLWindow.cpp
